chore(testimonials): update texts for slides 1-3; keep styles and equalized heights

--- a/index.html
+++ b/index.html
@@ -480,9 +480,9 @@
                                     <span class="text-yellow-400 text-xl">⭐⭐⭐⭐⭐</span>
                                 </div>
                                 <blockquote class="text-gray-700 mb-6 italic testimonial-text">
-                                    "Dopo l'intervento al ginocchio di mio padre, si è sviluppata un'infezione che i medici hanno sottovalutato. Centro Risarcimento Salute non solo ci ha aiutato a ottenere giustizia, ma Diana ci ha chiamati personalmente ogni settimana. Sono stati al nostro fianco nei momenti più difficili, quando non sapevamo più a chi rivolgerci."
+                                    "Dopo l'intervento al ginocchio di mio padre, si è sviluppata un'infezione che i medici hanno sottovalutato. Centro Risarcimento Salute non solo ci ha ottenuto un risarcimento di 180.000€, ma Diana ci ha chiamati personalmente ogni settimana. Sono stati al nostro fianco nei momenti più difficili, quando non sapevamo più a chi rivolgerci."
                                 </blockquote>
-                                <div class="font-semibold text-gray-900 mt-auto">Maria T. - Bari</div>
+                                <div class="font-semibold text-gray-900 mt-auto"><strong>Maria T. - Bari</strong></div>
                             </div>
                         </div>
                         <!-- Slide 2 -->
@@ -492,9 +492,9 @@
                                     <span class="text-yellow-400 text-xl">⭐⭐⭐⭐⭐</span>
                                 </div>
                                 <blockquote class="text-gray-700 mb-6 italic testimonial-text">
-                                    "Durante il parto è successo l'impensabile. A causa di negligenze mediche, il nostro bambino ha riportato danni permanenti. Sono stati gli unici a dirci la verità fin dall'inizio e a lottare davvero per noi, senza mai perdere la speranza. Dopo 18 mesi di battaglia insieme, abbiamo finalmente ottenuto il risarcimento che meritavamo."
+                                    "Durante il parto è successo l'impensabile. A causa di negligenze mediche, il nostro bambino ha riportato danni permanenti. Sono stati gli unici a dirci la verità fin dall'inizio e a lottare davvero per noi, senza mai perdere la speranza. Risarcimento di 420.000€ dopo 18 mesi di battaglia insieme."
                                 </blockquote>
-                                <div class="font-semibold text-gray-900 mt-auto">Alessandra M. - Lecce</div>
+                                <div class="font-semibold text-gray-900 mt-auto"><strong>Alessandra M. - Lecce</strong></div>
                             </div>
                         </div>
                         <!-- Slide 3 -->
@@ -504,9 +504,9 @@
                                     <span class="text-yellow-400 text-xl">⭐⭐⭐⭐⭐</span>
                                 </div>
                                 <blockquote class="text-gray-700 mb-6 italic testimonial-text">
-                                    "Dopo la diagnosi tardiva di tumore di mia madre, abbiamo cercato giustizia per anni senza successo. Centro Risarcimento Salute ha dimostrato la negligenza medica e ci ha aiutato a ottenere il giusto risarcimento. La loro competenza e il supporto umano ci hanno dato la forza di continuare."
+                                    "Dopo la diagnosi tardiva di tumore di mia madre, abbiamo cercato giustizia per anni senza successo. Centro Risarcimento Salute ha dimostrato la negligenza medica e ci ha ottenuto un risarcimento di 280.000€. La loro competenza e il supporto umano ci hanno dato la forza di continuare."
                                 </blockquote>
-                                <div class="font-semibold text-gray-900 mt-auto">Francesco R. - Potenza</div>
+                                <div class="font-semibold text-gray-900 mt-auto"><strong>Francesco R. - Potenza</strong></div>
                             </div>
                         </div>
                         <!-- Slide 4 -->
@@ -516,9 +516,9 @@
                                     <span class="text-yellow-400 text-xl">⭐⭐⭐⭐⭐</span>
                                 </div>
                                 <blockquote class="text-gray-700 mb-6 italic testimonial-text">
-                                    "Dopo un grave errore chirurgico durante un intervento di routine, non sapevo a chi rivolgermi. La Dott.ssa Castellano ha analizzato tutta la documentazione sanitaria con estrema professionalità e mi ha seguito passo dopo passo. Grazie al loro intervento ho ottenuto un risarcimento adeguato che mi ha permesso di affrontare le cure necessarie. La loro competenza in ambito di responsabilità medica è davvero eccezionale."
+                                    "Dopo un grave errore chirurgico durante un intervento di routine, non sapevo a chi rivolgermi. La Dott.ssa Castellano ha analizzato tutta la documentazione sanitaria con estrema professionalità e mi ha seguito passo dopo passo. Grazie al loro intervento ho ottenuto un risarcimento di 85.000€ che mi ha permesso di affrontare le cure necessarie. La loro competenza in ambito di responsabilità medica è davvero eccezionale."
                                 </blockquote>
-                                <div class="font-semibold text-gray-900 mt-auto">Giuseppe L. - Taranto</div>
+                                <div class="font-semibold text-gray-900 mt-auto"><strong>Giuseppe L. - Taranto</strong></div>
                             </div>
                         </div>
                         <!-- Slide 5 -->
@@ -528,9 +528,9 @@
                                     <span class="text-yellow-400 text-xl">⭐⭐⭐⭐⭐</span>
                                 </div>
                                 <blockquote class="text-gray-700 mb-6 italic testimonial-text">
-                                    "Mia moglie ha subito un'infezione nosocomiale grave dopo un intervento programmato. I medici dell'ospedale minimizzavano, ma noi sapevamo che qualcosa non andava. Centro Risarcimento Salute ha dimostrato la violazione dei protocolli sanitari e abbiamo finalmente ottenuto giustizia. La prima consulenza gratuita ci ha convinto della serietà del loro operato. Consiglio vivamente i loro servizi."
+                                    "Mia moglie ha subito un'infezione nosocomiale grave dopo un intervento programmato. I medici dell'ospedale minimizzavano, ma noi sapevamo che qualcosa non andava. Centro Risarcimento Salute ha dimostrato la violazione dei protocolli sanitari e abbiamo ottenuto giustizia con un risarcimento di 70.000€. La prima consulenza gratuita ci ha convinto della serietà del loro operato. Consiglio vivamente i loro servizi."
                                 </blockquote>
-                                <div class="font-semibold text-gray-900 mt-auto">Antonio e Laura B. - Brindisi</div>
+                                <div class="font-semibold text-gray-900 mt-auto"><strong>Antonio e Laura B. - Brindisi</strong></div>
                             </div>
                         </div>
                         <!-- Slide 6 -->
@@ -540,9 +540,9 @@
                                     <span class="text-yellow-400 text-xl">⭐⭐⭐⭐⭐</span>
                                 </div>
                                 <blockquote class="text-gray-700 mb-6 italic testimonial-text">
-                                    "Per tre anni ho convissuto con dolori inspiegabili dopo un intervento ortopedico. Nessuno mi credeva finché una nuova radiografia ha rivelato materiale chirurgico dimenticato. Ero disperata e non sapevo come procedere legalmente. La Dott.ssa Castellano ha gestito tutto con una professionalità incredibile, ottenendo per me il giusto risarcimento in fase stragiudiziale. Finalmente ho potuto rifarmi una vita. Grazie di cuore."
+                                    "Per tre anni ho convissuto con dolori inspiegabili dopo un intervento ortopedico. Nessuno mi credeva finché una nuova radiografia ha rivelato materiale chirurgico dimenticato. Ero disperata e non sapevo come procedere legalmente. La Dott.ssa Castellano ha gestito tutto con una professionalità incredibile, ottenendo per me un risarcimento di 65.000€ in fase stragiudiziale. Finalmente ho potuto rifarmi una vita. Grazie di cuore."
                                 </blockquote>
-                                <div class="font-semibold text-gray-900 mt-auto">Claudia S. - Foggia</div>
+                                <div class="font-semibold text-gray-900 mt-auto"><strong>Claudia S. - Foggia</strong></div>
                             </div>
                         </div>
                     </div>
