--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
                             <h3 class="text-2xl font-bold mb-6 text-center" style="color: #4e2d6b; font-family: 'Poppins', sans-serif;">
                                 Richiedi una consulenza gratuita
                             </h3>
-                            <form id="contact-form-home" class="space-y-4" action="https://hook.eu2.make.com/68sp912c7pll2gsqc3cuvyztufawknmc" method="POST">
+                            <form id="contact-form-home" class="space-y-4" action="https://hook.eu2.make.com/o8ukpy2130jda61yfz9l891mp3bhv05r" method="POST">
                                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                                     <div>
                                         <label for="nome" class="block text-sm font-semibold mb-2" style="color: #4e2d6b; font-family: 'Poppins', sans-serif;">Nome</label>
@@ -977,7 +977,7 @@
             swiper.on('slideChangeTransitionEnd', equalizeTestimonialHeights);
         })();
 
-        // Invio form CTA home a Make webhook senza lasciare la pagina
+        // Invio form CTA home a Make webhook (JSON) senza lasciare la pagina
         (function () {
             const form = document.getElementById('contact-form-home');
             if (!form) return;
@@ -986,10 +986,17 @@
                 const submitButton = form.querySelector('button[type="submit"]');
                 try {
                     if (submitButton) submitButton.disabled = true;
-                    const formData = new FormData(form);
-                    const response = await fetch(form.action, {
+                    const payload = {
+                        nome: (form.nome?.value || '').trim(),
+                        cognome: (form.cognome?.value || '').trim(),
+                        email: (form.email?.value || '').trim(),
+                        "numero di telefono": (form.telefono?.value || '').trim(),
+                        messaggio: (form.messaggio?.value || '').trim(),
+                    };
+                    const response = await fetch('https://hook.eu2.make.com/o8ukpy2130jda61yfz9l891mp3bhv05r', {
                         method: 'POST',
-                        body: formData,
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify(payload),
                         mode: 'cors',
                     });
                     if (response.ok || response.status === 0) {
