Integrate Iubenda Privacy Controls and Cookie Solution banner across pages

--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -247,6 +247,7 @@
             });
         }
     </script>
+    <script type="text/javascript" src="https://embeds.iubenda.com/widgets/4983a162-1bc1-4b9b-a9b6-700f3d282d80.js"></script>
 </body>
 </html>
 
